// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerForm renders correctly with organization customer profile 1`] = `
Array [
  <h4
    class="text brand h4"
  >
    ASIAKKAAN TIEDOT
  </h4>,
  <form
    action="#"
    class="form"
  >
    <div
      class="Select-module_root__Ka5uO select"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="customerGroup-toggle-button"
        id="customerGroup-label"
      >
        Asiakasryhmä
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="Select-module_wrapper__1WQXs"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="customerGroup-label customerGroup-toggle-button"
          aria-owns="customerGroup-menu"
          class="Select-module_button__1aIsm"
          id="customerGroup-toggle-button"
          type="button"
        >
          Yritys
          <svg
            aria-hidden="true"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <path
                d="M0 0h24v24H0z"
              />
              <path
                d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                fill="currentColor"
              />
            </g>
          </svg>
        </button>
        <ul
          aria-labelledby="customerGroup-label"
          aria-required="true"
          class="Select-module_menu__1H2aU"
          id="customerGroup-menu"
          role="listbox"
          style="max-height: 260px;"
          tabindex="-1"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="organizationName"
      >
        Yrityksen tai yhteisön nimi
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="organizationName"
          required=""
          type="text"
          value="Suomi Oy"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="businessId"
      >
        Y-tunnus
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="businessId"
          required=""
          type="text"
          value="1234567-8"
        />
      </div>
    </div>
    <hr
      class="divider"
    />
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="address"
      >
        Jakeluosoite
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="address"
          required=""
          type="text"
          value="Mariankatu 2"
        />
      </div>
    </div>
    <div
      class="grid cols2 grid"
    >
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="postalCode"
        >
          Postinumero
          <span
            aria-hidden="true"
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="postalCode"
            required=""
            type="text"
            value="00170"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="city"
        >
          Toimipaikka
          <span
            aria-hidden="true"
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="city"
            required=""
            type="text"
            value="Helsinki"
          />
        </div>
      </div>
    </div>
    <hr
      class="divider"
    />
    <span
      class="text standard span m bold"
    >
      Yhteyshenkilö
    </span>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="firstName"
      >
        Etunimet
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="firstName"
          required=""
          type="text"
          value="Lauri Kristian"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="lastName"
      >
        Sukunimi
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="lastName"
          required=""
          type="text"
          value="Relander"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="phone"
      >
        Puhelinnumero
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="phone"
          type="text"
          value="+358 00 000 0000"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="email"
      >
        Sähköpostiosoite
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="email"
          required=""
          type="text"
          value="test@example.com"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="comment"
      >
        Huomiot
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <textarea
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="comment"
        />
      </div>
    </div>
    <div
      class="formActionButtons"
    >
      <button
        class="Button-module_button__3wgee button_hds-button__2A0je Button-module_secondary__399Vd button_hds-button--secondary__1NOWS Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0"
        color="supplementary"
        type="button"
      >
        <span
          class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
        >
          Peruuta
        </span>
      </button>
      <button
        class="Button-module_button__3wgee button_hds-button__2A0je Button-module_primary__3bo_T button_hds-button--primary__2NVvO Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0"
        type="submit"
      >
        <span
          class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
        >
          Tallenna
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`CustomerForm renders correctly with private customer profile 1`] = `
Array [
  <h4
    class="text brand h4"
  >
    ASIAKKAAN TIEDOT
  </h4>,
  <form
    action="#"
    class="form"
  >
    <div
      class="Select-module_root__Ka5uO select"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="customerGroup-toggle-button"
        id="customerGroup-label"
      >
        Asiakasryhmä
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="Select-module_wrapper__1WQXs"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="customerGroup-label customerGroup-toggle-button"
          aria-owns="customerGroup-menu"
          class="Select-module_button__1aIsm"
          id="customerGroup-toggle-button"
          type="button"
        >
          Yksityinen
          <svg
            aria-hidden="true"
            class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Select-module_angleIcon__2-9AD"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <path
                d="M0 0h24v24H0z"
              />
              <path
                d="M12 13.5l5-5 1.5 1.5-6.5 6.5L5.5 10 7 8.5z"
                fill="currentColor"
              />
            </g>
          </svg>
        </button>
        <ul
          aria-labelledby="customerGroup-label"
          aria-required="true"
          class="Select-module_menu__1H2aU"
          id="customerGroup-menu"
          role="listbox"
          style="max-height: 260px;"
          tabindex="-1"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="firstName"
      >
        Etunimet
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="firstName"
          required=""
          type="text"
          value="Pehr Evind"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="lastName"
      >
        Sukunimi
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="lastName"
          required=""
          type="text"
          value="Svinhufvud"
        />
      </div>
    </div>
    <hr
      class="divider"
    />
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="address"
      >
        Jakeluosoite
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="address"
          required=""
          type="text"
          value="Mariankatu 2"
        />
      </div>
    </div>
    <div
      class="grid cols2 grid"
    >
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="postalCode"
        >
          Postinumero
          <span
            aria-hidden="true"
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="postalCode"
            required=""
            type="text"
            value="00170"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
          for="city"
        >
          Toimipaikka
          <span
            aria-hidden="true"
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="city"
            required=""
            type="text"
            value="Helsinki"
          />
        </div>
      </div>
    </div>
    <hr
      class="divider"
    />
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="phone"
      >
        Puhelinnumero
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="phone"
          type="text"
          value="+358 00 000 0000"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="email"
      >
        Sähköpostiosoite
        <span
          aria-hidden="true"
          class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
        >
          *
        </span>
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <input
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="email"
          required=""
          type="text"
          value="test@example.com"
        />
      </div>
    </div>
    <div
      class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
    >
      <label
        class="FieldLabel-module_label__2tl-4 text-input_hds-text-input__label__pDw_W "
        for="comment"
      >
        Huomiot
      </label>
      <div
        class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
      >
        <textarea
          class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
          id="comment"
        />
      </div>
    </div>
    <div
      class="formActionButtons"
    >
      <button
        class="Button-module_button__3wgee button_hds-button__2A0je Button-module_secondary__399Vd button_hds-button--secondary__1NOWS Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0"
        color="supplementary"
        type="button"
      >
        <span
          class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
        >
          Peruuta
        </span>
      </button>
      <button
        class="Button-module_button__3wgee button_hds-button__2A0je Button-module_primary__3bo_T button_hds-button--primary__2NVvO Button-module_theme-coat__2xA5D button_hds-button--theme-coat__12cO0"
        type="submit"
      >
        <span
          class="Button-module_label__2zMLC button_hds-button__label__2EQa-"
        >
          Tallenna
        </span>
      </button>
    </div>
  </form>,
]
`;
